bad/2020-07-06/15-22/37.1/build.err
run.c: In function ‘job’:
run.c:9:26: error: invalid operands to binary - (have ‘int’ and ‘char *’)
         pivot[i]=pivot[i]-"A"+"a"
                  ~~~~~~~~^
run.c:11:5: error: expected ‘;’ before ‘}’ token
     } else if (pivot[i]=='E'){
     ^
run.c:12:26: error: invalid operands to binary - (have ‘int’ and ‘char *’)
         pivot[i]=pivot[i]-"A"+"a"
                  ~~~~~~~~^
run.c:13:5: error: expected ‘;’ before ‘}’ token
     }
     ^